# ML-Project-1

./: .gitignore  AGENTS.md  GEMINI.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_exploration.ipynb  demo.ipynb
report/: feature_engineering_report.md
src/: data.py  eval.py  format_md.py  model.py  preprocessing.py
